--- a/src_2010/Package/TitanControlPanel.Package.csproj
+++ b/src_2010/Package/TitanControlPanel.Package.csproj
@@ -115,6 +115,9 @@
     <Compile Include="..\..\src_2012\Package\Properties\GlobalSuppressions.cs">
       <Link>Properties\GlobalSuppressions.cs</Link>
     </Compile>
+    <Compile Include="..\..\src_2012\Package\Registration\ProvideWizardEngineAttribute.cs">
+      <Link>Registration\ProvideWizardEngineAttribute.cs</Link>
+    </Compile>
     <Compile Include="..\..\src_2012\Package\Resources\Resources.Designer.cs">
       <Link>Resources\Resources.Designer.cs</Link>
       <AutoGen>True</AutoGen>
@@ -123,6 +126,9 @@
     </Compile>
     <Compile Include="..\..\src_2012\Package\TitanControlPanelPackage.cs">
       <Link>TitanControlPanelPackage.cs</Link>
+    </Compile>
+    <Compile Include="..\..\src_2012\Package\Wizards\MultiFileWizardEngine.cs">
+      <Link>Wizards\MultiFileWizardEngine.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
